   guaranteed to return an object
 * lib/Mail/DKIM/Common.pm (message_sender, message_originator):
   always return a Mail::Address object, even if the relevant headers
   were not found
 * t/corpus/dk_headers_2.txt renamed to bad_dk_2.txt: it turns out this
   message should've been failing all along, since the Sender header
   doesn't match the domain of the signature

2007-11-14: Jason Long <jlong@messiah.edu>
 * t/corpus/goodkey_4.txt: tests signature with i=a@b, public key implied g=
 * lib/Mail/DKIM/PublicKey.pm (check_granularity): fixed broken
   ends-with check, reported by Mark Martinec
 * t/corpus/good_dk_3.txt, good_dk_4.txt, good_dk_5.txt:
   these files test DomainKeys signatures with g= values in the public keys
 * t/corpus/bad_dk_1.txt: this one should fail, since the signature
   domain does not match the From/Sender header
 * scripts/dkimsign.pl: added option to override signature's d= tag

2007-11-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/relaxed.pm,
   lib/Mail/DKIM/Canonicalization/nowsp.pm,
   lib/Mail/DKIM/Canonicalization/DkCommon.pm,
   lib/Mail/DKIM/Canonicalization/dk_simple.pm,
   lib/Mail/DKIM/Canonicalization/simple.pm,
   lib/Mail/DKIM/Canonicalization/dk_nofws.pm,
   lib/Mail/DKIM/Canonicalization/DkimCommon.pm,
   lib/Mail/DKIM/MessageParser.pm:
   more speed-up optimizations by Mark Martinec, now multiple lines
   at once can be fed into the canonicalization bits

2007-11-08: Jason Long <jlong@messiah.edu>
 * Makefile.PL, others: version bump to 0.30

2007-11-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: minor doc edit
 * scripts/dkimsign.pl: generate "pretty" signatures;
   die on unrecognized signature type

2007-11-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Algorithm/Base.pm: cleanup (delete commented-out code)
 * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm (finish_message): fix bug
   where DomainKeys signatures were not "pretty",
   reported by Byung-Hee HWANG.
