@@ -8,6 +8,8 @@
  * t/corpus/dk_headers_2.txt renamed to bad_dk_2.txt: it turns out this
    message should've been failing all along, since the Sender header
    doesn't match the domain of the signature
+ * lib/Mail/DKIM/Verifier.pm: slight change to the "unsupported version"
+   detail message (don't want nested parenthesis)
 
 2007-11-14: Jason Long <jlong@messiah.edu>
  * t/corpus/goodkey_4.txt: tests signature with i=a@b, public key implied g=
